# kalibrlib

./: .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt  run_calibrate_cameras.sh  run_calibrate_imu_camera.sh  run_env.sh
apps/: gene_rosbag.py  generate_aprilgrid_yaml.py  kalibr_calibrate_cameras  kalibr_calibrate_imu_camera  kalibr_calibrate_rs_cameras
apps/aslam_cv/: __init__.py  createTargetPDF.py
apps/aslam_cv_backend/: __init__.py
apps/bsplines/: __init__.py
apps/incremental_calibration/: __init__.py
apps/kalibr_camera_calibration/: CameraCalibrator.py  CameraUtils.py  ObsDb.py
apps/kalibr_common/: ImageDatasetReader.py  ImuDatasetReader.py  TargetExtractor.py
apps/kalibr_imu_camera_calibration/: IccSensors.py
apps/others/: aprilgrid.yaml  imu.yaml  kalibr_camera_validator  test.py  test2.py
apps/sm/: __init__.py
cmake/: add_python_export_library.cmake
src/: CMakeLists.txt
src/Schweizer-Messer/: CMakeLists.txt
src/Schweizer-Messer/sm_boost/: CMakeLists.txt
src/Schweizer-Messer/sm_boost/include/boost/: portable_binary_archive.hpp
src/Schweizer-Messer/sm_boost/src/: portable_binary_oarchive.cpp
src/Schweizer-Messer/sm_common/: CMakeLists.txt
src/Schweizer-Messer/sm_eigen/: CMakeLists.txt
src/Schweizer-Messer/sm_kinematics/: CMakeLists.txt
src/Schweizer-Messer/sm_logging/: CMakeLists.txt
src/Schweizer-Messer/sm_matrix_archive/: CMakeLists.txt
src/Schweizer-Messer/sm_opencv/: CMakeLists.txt
src/Schweizer-Messer/sm_property_tree/: CMakeLists.txt
src/Schweizer-Messer/sm_random/: CMakeLists.txt
src/Schweizer-Messer/sm_timing/: CMakeLists.txt
src/aslam_cv/: CMakeLists.txt
src/aslam_cv/aslam_cameras/: CMakeLists.txt
src/aslam_cv/aslam_cameras/include/aslam/: targets.hpp
src/aslam_cv/aslam_cv_backend/: CMakeLists.txt
src/aslam_cv/aslam_cv_error_terms/: CMakeLists.txt
src/aslam_cv/aslam_cv_serialization/: CMakeLists.txt
src/aslam_cv/aslam_imgproc/: CMakeLists.txt
src/aslam_cv/aslam_time/: CMakeLists.txt
src/aslam_incremental_calibration/incremental_calibration/: CMakeLists.txt
src/aslam_nonparametric_estimation/: CMakeLists.txt
src/aslam_nonparametric_estimation/aslam_splines/: CMakeLists.txt
src/aslam_nonparametric_estimation/bsplines/: CMakeLists.txt
src/aslam_offline_calibration/: CMakeLists.txt
src/aslam_offline_calibration/ethz_apriltag2/: CMakeLists.txt
src/aslam_offline_calibration/kalibr_errorterms/: CMakeLists.txt
src/aslam_optimizer/: CMakeLists.txt
src/aslam_optimizer/aslam_backend/: CMakeLists.txt
src/aslam_optimizer/aslam_backend_expressions/: CMakeLists.txt
src/aslam_optimizer/sparse_block_matrix/: CMakeLists.txt
src/python/: CMakeLists.txt
src/python/aslam_backend_python/: CMakeLists.txt
src/python/aslam_cv_backend_python/: CMakeLists.txt
src/python/aslam_cv_python/: CMakeLists.txt
src/python/aslam_cv_python/src/: GridCalibration.cpp
src/python/aslam_splines_python/: CMakeLists.txt
src/python/bsplines_python/: CMakeLists.txt
src/python/incremental_calibration_python/: CMakeLists.txt
src/python/kalibr_errorterms_python/: CMakeLists.txt
src/python/numpy_eigen/: CMakeLists.txt
src/python/sm_python/: CMakeLists.txt
