add_subdirectory(numpy_eigen)
add_subdirectory(aslam_backend_python)
add_subdirectory(sm_python)
add_subdirectory(incremental_calibration_python)
add_subdirectory(bsplines_python)
add_subdirectory(aslam_splines_python)
add_subdirectory(aslam_cv_python)
add_subdirectory(aslam_cv_backend_python)
add_subdirectory(kalibr_errorterms_python)